--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Document</title>
         <link rel="stylesheet" href="./css/main.css">
         <link rel="stylesheet" href="./css/nav.css">
+        <script src="./js/main.js"></script>
     </head>
     <body>
         <nav class="navigation">
