--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </head>
     <body>
         <nav class="navigation">
+            <a id="nav-logo" href="index.html"><img id="logo" src="./res/coffee-cup.svg" alt=""></a>
             <ul class="nav-items">
                 <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">About</a></li>
