--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <link rel="stylesheet" href="/css/main.css">
-        <link rel="stylesheet" href="css/nav.css">
+        <link rel="stylesheet" href="./css/main.css">
+        <link rel="stylesheet" href="./css/nav.css">
     </head>
     <body>
         <nav class="navigation">
             <ul class="nav-items">
-                <li class="nav-item"><a href="#" class="nav-link"></a></li>
-                <li class="nav-item"><a href="#" class="nav-link"></a></li>
-                <li class="nav-item"><a href="#" class="nav-link"></a></li>
-                <li class="nav-item"><a href="#" class="nav-link"></a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Products</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
             </ul>
         </nav>
     </body>
