--- a/index.html
+++ b/index.html
@@ -10,14 +10,21 @@
         <script src="./js/main.js"></script>
     </head>
     <body>
-        <nav class="navigation">
-            <a id="nav-logo" href="index.html"><img id="logo" src="./res/coffee-cup.svg" alt=""></a>
-            <ul class="nav-items">
-                <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Products</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
-            </ul>
-        </nav>
+        <header id="banner">
+            <nav class="navigation">
+                <a id="nav-logo" href="index.html"><img id="logo" src="./res/coffee-cup.svg" alt=""></a>
+                <ul class="nav-items">
+                    <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Products</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="intro">
+                <p class="big-p">The Perfect Coffee.</p>
+                <p class="small-p">For Perfect Moments.</p>
+                <button class="btn">Check</button>
+            </div>
+        </header>
     </body>
 </html>
